update; fix some css selectors

--- a/public/index.html
+++ b/public/index.html
@@ -35,9 +35,57 @@
       site to gather the list of courses I have taken.
       </p>
       </div>
-      <br/><p>Totals - Course: 33, Time: 50h 10m</p><br/>
+      <br/><p>Totals - Course: 36, Time: 66h 10m</p><br/>
 
       <ul>
+            <li>
+              <hr class="hr_curriculum">
+              <ul>
+                <li>
+                  <a target="_blank" href="https://www.aws.training/Details/Curriculum?id=38138">
+                    Mobile Development in IoT
+                  </a>                  </li>
+                <li class="type">curriculum</li>
+                <li class="level">intermediate</li>
+                <li class="duration">2 hours</li>
+                <li class="completed"><i>Completed: 14 September, 2020</i></li>
+                <li class="description">In this course, you will learn how to create mobile and web applications that use AWS IoT Core, AWS AppSync, and Amazon Cognito to interact with Internet of Things (IoT) devices. Across IoT verticals, customers need the ability to allow authenticated, authorized users to interact with IoT devices using Amazon Web Services (AWS). This course will cover how several services can be used to implement common user and device interactions, including pairing a device to a user, controlling a device through a mobile application, and receiving real-time updates of device messages as an end user.</li>
+                <li class="topbottom"><a href="#top">top</a> / <a href="#bottom">bottom</a></li>
+              </ul>
+            </li>
+            <li>
+              <hr class="hr_curriculum">
+              <ul>
+                <li>
+                  <a target="_blank" href="https://www.aws.training/Details/Curriculum?id=42335">
+                    Deep Dive into AWS IoT Authentication and Authorization 
+                  </a>                  </li>
+                <li class="type">curriculum</li>
+                <li class="level">advanced</li>
+                <li class="duration">4 hours</li>
+                <li class="completed"><i>Completed: 25 June, 2020</i></li>
+                <li class="description">Security is a central concern for all of Amazon Web Services (AWS). Security is extremely important in the field of IoT (Internet of Things) because IoT devices are physically accessible. Authentication and authorization are the foundations of a secure IoT infrastructure.
+This course explores the concepts of IoT authentication and authorization within AWS IoT. You will learn about the IoT control plane and data plane and how to authenticate and authorize to both. This course is intended for students who would like to securely connect devices, mobile apps, desktop apps, web apps, or the CLI to AWS IoT. You will learn about using different authentication methods and their appropriate authorization policies.</li>
+                <li class="topbottom"><a href="#top">top</a> / <a href="#bottom">bottom</a></li>
+              </ul>
+            </li>
+            <li>
+              <hr class="hr_learning_path">
+              <ul>
+                <li>
+                  <a target="_blank" href="https://www.aws.training/Details/Curriculum?id=43468">
+                    AWS IoT Security Series
+                  </a>                  </li>
+                <li class="type">learning path</li>
+                <li class="level">intermediate</li>
+                <li class="duration">10 hours</li>
+                <li class="completed"><i>Completed: 10 June, 2020</i></li>
+                <li class="description">Security is a central concern for all of Amazon Web Services (AWS). Security is extremely important in the field of IoT (Internet of Things) because IoT devices are physically accessible. Authentication and authorization are the foundations of a secure IoT infrastructure.
+This security path provides you with an introduction to AWS IoT security and deeper information about how to configure and maintain security within your AWS IoT solution.
+Once you complete this series, you will have gained in-depth knowledge and skills within AWS IoT security, and hands-on experience with a broad range of topics; such as, writing AWS IoT policies, creating a custom authorizer, and scheduling audit checks of your AWS IoT settings. Furthermore, by completing the AWS IoT Security Series, you will be better prepared to secure your fleet’s authorization and authentication processes, monitor your fleet’s behavior, and respond effectively with mitigation actions.</li>
+                <li class="topbottom"><a href="#top">top</a> / <a href="#bottom">bottom</a></li>
+              </ul>
+            </li>
             <li>
               <hr class="hr_e_learning">
               <ul>
