--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,8 @@
       site to gather the list of courses I have taken.
       </p>
       </div>
+<sup><sub>(updated Tue Sep 15 2020 06:18:51 GMT-0600 (Mountain Daylight Time))</sub></sup>
+
       <br/><p>Totals - Course: 36, Time: 66h 10m</p><br/>
 
       <ul>
